# dotilim

./: .editorconfig  Cargo.toml  readme.md
.github/workflows/: code-audit.yaml
src/: main.rs
test/: config-simple.toml
