[package]
name = "dotilim"
version = "1.0.0"
authors = ["Selwyn <talk@selwyn.cc>"]
edition = "2021"

[dependencies]
crossbeam = { version = "0.8" }
dirs = { version = "4.0" }
glob = { version = "0.3" }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
shellexpand = { version = "2.0" }
toml = { version = "0.5" }
zbus = { version = "3.2" }
zvariant = { version = "3.7" }

[profile.release]
strip = true
